@@ -1,5 +1,5 @@
 <?php
-// $Id: FeedsParser.inc,v 1.7 2010/01/25 20:03:05 alexb Exp $
+// $Id: FeedsParser.inc,v 1.8 2010/01/28 20:08:00 alexb Exp $
 
 /**
  * Abstract class, defines interface for parsers.
@@ -237,10 +237,10 @@ class FeedsDateTimeElement extends FeedsElement {
   protected static function readDateField($node, $field_name) {
     $field = content_fields($field_name);
     $ret = new FeedsDateTimeElement();
-    if ($node->{$field_name}[0]['date'] instanceof FeedsDateTime) {
+    if (isset($node->{$field_name}[0]['date']) && $node->{$field_name}[0]['date'] instanceof FeedsDateTime) {
       $ret->start = $node->{$field_name}[0]['date'];
     }
-    if ($node->{$field_name}[0]['date2'] instanceof FeedsDateTime) {
+    if (isset($node->{$field_name}[0]['date2']) && $node->{$field_name}[0]['date2'] instanceof FeedsDateTime) {
       $ret->end = $node->{$field_name}[0]['date2'];
     }
     return $ret;
