@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds_mapper_date.test,v 1.1 2010/01/15 19:44:54 alexb Exp $
+// $Id: feeds_mapper_date.test,v 1.2 2010/01/28 19:40:49 alexb Exp $
 
 /**
  * @file
@@ -19,7 +19,7 @@ class FeedsMapperDateTestCase extends FeedsMapperTestCase {
 	public static function getInfo() {
     return array(
       'name' => t('Mapper: Date'),
-      'description' => t('Test Feeds Mapper support for CCK Date fields'),
+      'description' => t('Test Feeds Mapper support for CCK Date fields. <strong>Requires CCK and Date module</strong>.'),
       'group' => t('Feeds'),
     );
   }
