@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds_mapper_filefield.test,v 1.1 2010/01/12 16:28:02 alexb Exp $
+// $Id: feeds_mapper_filefield.test,v 1.3 2010/01/28 20:07:29 alexb Exp $
 
 require_once(drupal_get_path('module', 'feeds') . '/tests/feeds_mapper_test.inc');
 
@@ -15,7 +15,7 @@ class FeedsMapperFileFieldTestCase extends FeedsMapperTestCase {
   public static function getInfo() {
     return array(
       'name' => t('Mapper: FileField'),
-      'description' => t('Test Feeds Mapper support for FileField CCK fields'),
+      'description' => t('Test Feeds Mapper support for FileField CCK fields. <strong>Requires CCK and filefield module</strong>.'),
       'group' => t('Feeds'),
     );
   }
@@ -25,10 +25,7 @@ class FeedsMapperFileFieldTestCase extends FeedsMapperTestCase {
    */
   public function setUp() {
     // Call parent setup with the required module
-    parent::setUp(
-      'devel', 'feeds', 'feeds_ui', 'ctools', 'content',
-      'filefield'
-    );
+    parent::setUp('feeds', 'feeds_ui', 'ctools', 'content', 'filefield');
 
     // Create user and login
     $this->drupalLogin($this->drupalCreateUser(
@@ -37,7 +34,6 @@ class FeedsMapperFileFieldTestCase extends FeedsMapperTestCase {
           'administer feeds',
           'administer nodes',
           'administer site configuration',
-          'access devel information'
         )
     ));
   }
